--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,10 +23,13 @@ steps:
     goals: 'package'
 - task: CopyFiles@2
   inputs:
-    Contents: 'helloworld.war'
+    SourceFolder: '$(system.defaultworkingdirectory)'
+    Contents: '**/*.war'
     TargetFolder:  '$(build.artifactstagingdirectory)'
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
     publishLocation: 'Container'
+
+    
